# FreeMCP

./: .gitignore  CMakeLists.txt  README.md  buildapk.sh  compile  fireapk.sh
Module/archcore/: CMakeLists.txt
Module/archcore/root/: root.cpp
Module/archcore/rwx/: rwx.cpp
Module/archcore/terminal/: terminal.cpp
Module/audio/: CMakeLists.txt  audio.cpp
Module/browser/: CMakeLists.txt  browser.cpp
Module/clipboard/: CMakeLists.txt  clipboard.cpp
Module/display/: CMakeLists.txt  display.cpp
Module/files/: CMakeLists.txt  files.cpp
Module/mouse/: CMakeLists.txt  mouse.cpp
Module/network/: CMakeLists.txt  network.cpp
Module/notify/: CMakeLists.txt  notify.cpp
Module/power/: CMakeLists.txt  power.cpp
Module/system/: CMakeLists.txt  system.cpp
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/freemcp/app/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
include/FreeMCP/: Memory.h  Module.h  Ollama.h  Persona.h
include/FreeMCP/Core/: ChatEngine.h  ConfigManager.h  IntentClassifier.h  NetListener.h  OllamaClient.h  PromptBuilder.h  SystemDiscovery.h  SystemShell.h  ToolExecutor.h  Utils.h
include/FreeMCP/Module/: Browser.h
include/FreeMCP/UI/: StoreApp.h
include/FreeMCP/UI/Views/: BrainView.h  ChatView.h  HomeView.h  LogsView.h  SettingsView.h
src/: main.cpp  memory.cpp  persona.cpp
src/Core/: ChatEngine.cpp  ConfigManager.cpp  IntentClassifier.cpp  NetListener.cpp  OllamaClient.cpp  PromptBuilder.cpp  SystemDiscovery.cpp  SystemShell.cpp  ToolExecutor.cpp  Utils.cpp
src/UI/: StoreApp.cpp  StoreMainWindow.cpp
src/UI/Views/: BrainView.cpp  ChatView.cpp  HomeView.cpp  LogsView.cpp  SettingsView.cpp
